# internal/docs/swagger.yaml
@@ -627,6 +627,26 @@ paths:
       summary: 根据Slug获取分类
       tags:
       - category
+  /github/contributions:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handler.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.Response'
+      summary: 获取 GitHub 贡献日历
+      tags:
+      - github
   /owner:
     get:
       produces:
